--- a/pages/museo.html
+++ b/pages/museo.html
@@ -171,7 +171,9 @@
 									Chicago también desempeñó un papel clave como centro de abastecimiento para aquellos que se aventuraban por la Ruta 66. Los viajeros a menudo se detenían en Chicago para abastecerse de suministros, prepararse para su viaje o simplemente descansar antes de embarcarse</p>
 							</div>
 							<div class="fotosCiudad">
-								<img src="../images/granero/ciudades/ch/2af94a274ebf7f6716f9b2068595581c.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/ch/2af94a274ebf7f6716f9b2068595581c.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/ch/caption.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/ch/chicago-illinois-CHITG0221-e448062fc5164da0bba639f9857987f6.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -227,6 +229,18 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Springfield, Illinois, es una ciudad importante en la historia de la Ruta 66. Springfield es conocida como la "Ciudad de Abraham Lincoln" debido a su estrecha asociación con el presidente de los Estados Unidos, Abraham Lincoln, quien vivió en Springfield antes de su elección como presidente. La Ruta 66 pasaba directamente por Springfield en su recorrido desde Chicago, Illinois, hacia el oeste. Esto significaba que Springfield era una parada importante para los viajeros que recorrían la Ruta 66. La carretera atravesaba el centro de la ciudad, lo que la hacía un punto de referencia icónico en el camino.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/sp/627-1259_small.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/sp/Court_Square,_Springfield_MA.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/sp/Springfield-MA.jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<p class="cajaContenido">Springfield, Illinois, es una ciudad importante en la historia de la Ruta 66. Springfield es conocida como la "Ciudad de Abraham Lincoln" debido a su estrecha asociación con el presidente de los Estados Unidos, Abraham Lincoln, quien vivió en Springfield antes de su elección como presidente. La Ruta 66 pasaba directamente por Springfield en su recorrido desde Chicago, Illinois, hacia el oeste. Esto significaba que Springfield era una parada importante para los viajeros que recorrían la Ruta 66. La carretera atravesaba el centro de la ciudad, lo que la hacía un punto de referencia icónico en el camino.</p>
 					<div class="contenedor-galeria">
 						<ul>
@@ -275,7 +289,20 @@
 					<h2>Oklahoma</h2>
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
+				
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Oklahoma cuenta con aproximadamente 400 millas (unos 640 kilómetros) de la Ruta 66, y numerosas ciudades y pueblos en el estado tienen una fuerte conexión con la carretera. Algunos de los puntos destacados de la Ruta 66 en Oklahoma incluyen la ciudad de Tulsa, que alberga el famoso arco de la Ruta 66 y el Museo de Historia de la Ruta 66, así como Oklahoma City, que tiene una vibrante escena de la Ruta 66 y el Capitolio del Estado de Oklahoma, un sitio histórico cerca de la carretera. Oklahoma también presenta paisajes variados, desde las montañas de Ozark hasta las planicies, lo que la convierte en un estado emblemático para los viajeros que exploran la Ruta 66 en busca de su rica historia y cultura.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/ok/258564-Oklahoma-City.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/ok/Oklahoma-City-1.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/ok/catedral vieja catolica de san jose.jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
@@ -324,6 +351,18 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudadChicago">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">La Ruta 66 entra a Texas desde el norte en Shamrock y sale hacia el oeste en Glenrio, pasando por ciudades como Amarillo y Vega. En Amarillo, los viajeros pueden visitar el famoso Cadillac Ranch, una instalación artística que presenta automóviles enterrados en el suelo, así como el Museo Histórico de la Ruta 66. Texas ofrece un tramo icónico de la Ruta 66 con amplias carreteras y paisajes desérticos, lo que la convierte en una experiencia única para aquellos que siguen la ruta. La Ruta 66 en Texas es rica en historia y cultura, lo que la hace especialmente atractiva para los entusiastas de la carretera y los viajeros que buscan explorar su legado.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/tx/amarillo texas.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/tx/cadillac ranch amarillo texas.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/tx/Big Bend National Park.webp" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
@@ -359,7 +398,7 @@
 							</li>
 						</ul>
 					</div>
-					<p class="cajaContenido">a Ruta 66 entra a Texas desde el norte en Shamrock y sale hacia el oeste en Glenrio, pasando por ciudades como Amarillo y Vega. En Amarillo, los viajeros pueden visitar el famoso Cadillac Ranch, una instalación artística que presenta automóviles enterrados en el suelo, así como el Museo Histórico de la Ruta 66. Texas ofrece un tramo icónico de la Ruta 66 con amplias carreteras y paisajes desérticos, lo que la convierte en una experiencia única para aquellos que siguen la ruta. La Ruta 66 en Texas es rica en historia y cultura, lo que la hace especialmente atractiva para los entusiastas de la carretera y los viajeros que buscan explorar su legado.</p>
+					<p class="cajaContenido">La Ruta 66 entra a Texas desde el norte en Shamrock y sale hacia el oeste en Glenrio, pasando por ciudades como Amarillo y Vega. En Amarillo, los viajeros pueden visitar el famoso Cadillac Ranch, una instalación artística que presenta automóviles enterrados en el suelo, así como el Museo Histórico de la Ruta 66. Texas ofrece un tramo icónico de la Ruta 66 con amplias carreteras y paisajes desérticos, lo que la convierte en una experiencia única para aquellos que siguen la ruta. La Ruta 66 en Texas es rica en historia y cultura, lo que la hace especialmente atractiva para los entusiastas de la carretera y los viajeros que buscan explorar su legado.</p>
 				</div>
 			</div>
 		</section>
@@ -372,6 +411,18 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Albuquerque, ubicada en el estado de Nuevo México, desempeña un papel destacado en la historia de la Ruta 66. La carretera pasa directamente a través de la ciudad, y Albuquerque es conocida por su vibrante escena de la Ruta 66 y su arquitectura característica de mediados de siglo. El área de Nob Hill en Albuquerque es especialmente famosa por sus negocios, moteles y restaurantes relacionados con la Ruta 66. Además, el Museo de la Ruta 66 de Albuquerque es un destino popular para los visitantes que desean aprender más sobre la historia de la carretera y su influencia en la cultura estadounidense. Con su rica herencia en la Ruta 66 y su ubicación en el suroeste de Estados Unidos, Albuquerque es un punto clave de interés para aquellos que exploran esta histórica carretera.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/alb/ciudad.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/alb/festival de globos albuquerque.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/alb/iglesia san felipe de neri old town albuquerque.jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<p class="cajaContenido">Albuquerque, ubicada en el estado de Nuevo México, desempeña un papel destacado en la historia de la Ruta 66. La carretera pasa directamente a través de la ciudad, y Albuquerque es conocida por su vibrante escena de la Ruta 66 y su arquitectura característica de mediados de siglo. El área de Nob Hill en Albuquerque es especialmente famosa por sus negocios, moteles y restaurantes relacionados con la Ruta 66. Además, el Museo de la Ruta 66 de Albuquerque es un destino popular para los visitantes que desean aprender más sobre la historia de la carretera y su influencia en la cultura estadounidense. Con su rica herencia en la Ruta 66 y su ubicación en el suroeste de Estados Unidos, Albuquerque es un punto clave de interés para aquellos que exploran esta histórica carretera.</p>
 					<div class="contenedor-galeria">
 						<ul>
@@ -421,6 +472,18 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Flagstaff, Arizona, es otra ciudad icónica en la historia de la Ruta 66. Situada en el norte de Arizona, la Ruta 66 atraviesa Flagstaff, lo que la convierte en una parada importante para los viajeros que recorren la carretera. La ciudad está rodeada de hermosos paisajes montañosos y bosques, y es conocida por su ambiente pintoresco y su arquitectura de mediados del siglo XX. En Flagstaff, los visitantes pueden explorar el Museo de Historia de la Ruta 66 y admirar el famoso Motel Wigwam Village, que ofrece cabañas en forma de wigwam. Además, Flagstaff es una puerta de entrada al Parque Nacional del Gran Cañón, lo que la convierte en un destino popular para aquellos que viajan a lo largo de la Ruta 66 y desean explorar esta maravilla natural. La ciudad encarna el espíritu de la Ruta 66 y ofrece una experiencia única a los entusiastas de la carretera y los amantes de la aventura.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/fla/crater.webp" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/fla/flagstaff dowtown.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/fla/flagstaff winter.jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
@@ -469,6 +532,18 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Las Vegas, Nevada, es una ciudad mundialmente conocida por su vida nocturna, casinos de renombre, espectáculos en vivo, y una ecléctica escena gastronómica. Situada en el famoso Strip, ofrece hoteles de lujo, resorts, y entretenimiento sin fin. Además de los casinos, puedes disfrutar de espectáculos en vivo de alta calidad, experiencias gastronómicas de chef, y visitar atracciones turísticas como la noria High Roller y el Museo Neon. Con un clima desértico, Las Vegas atrae a visitantes durante todo el año y es un destino ideal tanto para la diversión nocturna como para explorar su variedad de atracciones.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/lv/230705091855-05-msg-sphere-las-vegas-full-169.webp" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/lv/the-strip.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/lv/las-vegas_d.jpg.image.1296.974.high.webp" alt="">
+							</div>
+						</div>
+					</div>
 					<p class="cajaContenido">Las Vegas, Nevada, es una ciudad mundialmente conocida por su vida nocturna, casinos de renombre, espectáculos en vivo, y una ecléctica escena gastronómica. Situada en el famoso Strip, ofrece hoteles de lujo, resorts, y entretenimiento sin fin. Además de los casinos, puedes disfrutar de espectáculos en vivo de alta calidad, experiencias gastronómicas de chef, y visitar atracciones turísticas como la noria High Roller y el Museo Neon. Con un clima desértico, Las Vegas atrae a visitantes durante todo el año y es un destino ideal tanto para la diversión nocturna como para explorar su variedad de atracciones.</p>
 					<div class="contenedor-galeria">
 						<ul>
@@ -518,6 +593,27 @@
 					<img class="objetosCartel2" src="../images/granero/museo/cartel 66.webp" alt="">
 				</div>
 				<div class="informacionCiudad">
+					<div class="contenidoCiudadCelu">
+						<div class="cajaCiudadCelu">
+							<div class="InfoCiudad">
+								<p class="textoCelu">Los Ángeles es una ciudad icónica ubicada en California, conocida por su
+									diversidad cultural y atracciones turísticas como Hollywood, el Parque Griffith y Disneyland.
+									Tiene un clima mediterráneo y es un importante centro cultural y de entretenimiento.
+									La Ruta 66, también llamada la "Main Street of America", fue una histórica carretera que se
+									extendía
+									desde Chicago hasta Los Ángeles. Fue emblemática por su cultura de carretera,
+									letreros icónicos y lugares históricos a lo largo del camino. A pesar de su declive después de
+									la
+									construcción de autopistas modernas, todavía atrae a entusiastas de la historia
+									de carreteras.</p>
+							</div>
+							<div class="fotosCiudad">
+								<img class="fotosCelu" src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg" alt="">
+								<img class="fotosCelu" src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="contenedor-galeria">
 						<ul>
 							<li>
