--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
 						<!-- DROPDOWN MENU -->
 						<li><a href="#UbicacionYhorarios">Ubicación y horarios</a></li>
 
+						<li><a href="./pages/museo.html">Mapa</a></li>
+
 
 						<!-- DROPDOWN MENU 
 						<li><a href="#">Contacto</a>
