--- a/pages/museo.html
+++ b/pages/museo.html
@@ -65,10 +65,9 @@
 				<nav class="navik-menu menu-caret navik-yellow">
 					<ul class="top-list">
 						<!-- DROPDOWN MENU -->
-						<li><a href="#LA">Inicio</a>
+						<li><a href="../index.html">Inicio</a>
 						</li>
 						<!-- DROPDOWN MENU -->
-						<li><a href="#LA">Ubicación y horarios</a></li>
 						<!-- DROPDOWN MENU 
 						<li><a href="#">Contacto</a>
 						-->
