--- a/pages/museo.html
+++ b/pages/museo.html
@@ -232,6 +232,7 @@
 						<div class="cajaCiudadCelu">
 							<div class="InfoCiudad">
 								<p class="textoCelu">Springfield, Illinois, es una ciudad importante en la historia de la Ruta 66. Springfield es conocida como la "Ciudad de Abraham Lincoln" debido a su estrecha asociación con el presidente de los Estados Unidos, Abraham Lincoln, quien vivió en Springfield antes de su elección como presidente. La Ruta 66 pasaba directamente por Springfield en su recorrido desde Chicago, Illinois, hacia el oeste. Esto significaba que Springfield era una parada importante para los viajeros que recorrían la Ruta 66. La carretera atravesaba el centro de la ciudad, lo que la hacía un punto de referencia icónico en el camino.</p>
+								<img src="../images/granero/favicon/favicon-32x32.png" alt="">
 							</div>
 							<div class="fotosCiudad">
 								<img class="fotosCelu" src="../images/granero/ciudades/sp/627-1259_small.jpg" alt="">
