--- a/index.html
+++ b/index.html
@@ -738,6 +738,28 @@
 				</div> <!-- End row -->
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
+		
+		<section class="bg-fixed wide-100 about-section division bordes">
+			<div class="container sectionMuseo">
+				<div class="row">
+					<!-- ABOUT TEXT -->
+					<div class="videoAuto">
+						<video src="./images/granero/Car.mp4" autoplay loop></video>
+						
+							<div class="about-2-txt text-center">
+							<!-- Title -->
+								<h2 class="h2-lg">preparate para dar una vuelta por la ruta 66</h2>
+							<!-- Text -->
+								<p class="p-lg grey-color">vivi la experiencia de recorrer la ruta 66 desde tu casa</p>
+							<!-- Button -->
+								<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Comenzar viaje 🎃</a>
+						
+						</div> <!-- END ABOUT TEXT -->
+					</div> <!-- End row -->
+				</div>
+			</div> <!-- End container -->
+		</section>
+		
 
 
 
