--- a/index.html
+++ b/index.html
@@ -741,8 +741,8 @@
 		
 		<section class=" division bordes sectionMuseo">
 			<div class="videoAuto">
-				<h2 class="h2-lg">Vivi la experiencia de la ruta 66</h2>
-				<p class="p-lg grey-color">disfruta la ruta 66 desde tu casa
+				<h2 class="">Vivi la experiencia de la ruta 66</h2>
+				<p class=" grey-color">disfruta la ruta 66 desde tu casa
 				</p>
 				<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Iniciar viaje 🎃</a>
 			</div>
