--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
 				<h2 class="">Vivi la experiencia de la ruta 66</h2>
 				<p class=" grey-color">disfruta la ruta 66 desde tu casa
 				</p>
-				<a href="https://queresto.com/granero66" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Iniciar viaje 🎃</a>
+				<a href="./pages/museo.html" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Iniciar viaje 🎃</a>
 			</div>
 			<div class="video-container">
 				<video autoplay loop muted id="video-fondo">
