--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 				<a href="./pages/museo.html" target="_blank" class="btn btn-md btn-red tra-red-hover">🎃 Iniciar viaje 🎃</a>
 			</div>
 			<div class="video-container">
-				<video autoplay loop muted id="video-fondo">
+				<video autoplay muted playsinline id="video-fondo">
 					<source src="./images/granero/Car.mp4" type="video/mp4">
 				</video>
 			</div>
