--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@
 					<div class="">
 						<div class="inicio">
 							<div style="padding:56.25% 0 0 0;position:relative;">
-								<iframe src="https://player.vimeo.com/video/882083111?h=2060a02dc7&autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+								<iframe src="https://player.vimeo.com/video/882083111?h=2060a02dc7&autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 							</div>
+
 							
 							<!-- PAGE CONTENT
 		
