--- a/index.html
+++ b/index.html
@@ -752,12 +752,12 @@
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
-		<!-- VIDEO MAPA
+		
 			
 		<section class=" division bordes sectionMuseo">
 			<div class="videoAuto">
-				<h2 class="">Vivi la experiencia de la ruta 66</h2>
-				<p class=" grey-color">disfruta la ruta 66 desde tu casa
+				<h2 class="h2-lg text-center">Vivi la experiencia de la ruta 66</h2>
+				<p class="white-color">disfruta la ruta 66 desde tu casa
 				</p>
 				<a href="./pages/museo.html" target="_blank" class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
 			</div>
@@ -767,14 +767,13 @@
 				</video>
 			</div>
 		</section>
-		============================================= -->
-
+		
 
 
 
 		<!-- PROMO-2
 			============================================= -->
-		<section id="promo-2" class="promo-section division">
+		<section id="promo-2" class="promo-section division espacio">
 			<div class="container">
 				<div class="row d-flex align-items-center">
 
@@ -784,8 +783,8 @@
 						<div id="pb-2-1" class="pbox-2 bg-fixed">
 							<div class="pbox-2-txt brown-color texto container">
 
-								<h4 class="h4-lg txt-300 ">Edicion limitada</h4>
-								<h4 class="h4-xl ">halloween</h4>
+								<h4 class="h4-lg txt-300 ">Nuevas</h4>
+								<h4 class="h4-xl ">Mila66</h4>
 								<a href="https://queresto.com/granero66" target="_blank"
 									class="btn btn-red tra-red-hover">Conocer mas</a>
 
