--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 				<h2 class="h2-lg text-center">Vivi la experiencia de la ruta 66</h2>
 				<p class="white-color">disfruta la ruta 66 desde tu casa
 				</p>
-				<a href="./pages/museo.html" target="_blank" class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
+				<a href="./pages/museo.html"  class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
 			</div>
 			<div class="video-container">
 				<video autoplay muted playsinline id="video-fondo">
