--- a/pages/museo.html
+++ b/pages/museo.html
@@ -736,12 +736,21 @@
 									de carreteras.</p>
 							</div>
 							<div class="fotosCiudad">
-								<img class="fotosCelu"
-									src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg" alt="">
-								<img class="fotosCelu"
-									src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg" alt="">
-								<img class="fotosCelu"
-									src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg" alt="">
+								<div class="fotosCelu">
+									<h3 class="blanco">paseo de la fama</h3>
+									<img 
+										src="../images/granero/ciudades/la/1140-hollywood-walk-of-fame-esp.jpg" alt="">
+								</div>
+								<div class="fotosCelu">
+									<h3 class="blanco">ciudad de los angeles</h3>
+									<img 
+										src="../images/granero/ciudades/la/1200px-LA_Skyline_Mountains2.jpg" alt="">
+								</div>
+								<div class="fotosCelu">
+									<h3 class="blanco">cartel hoolywood</h3>
+									<img 
+										src="../images/granero/ciudades/la/Hollywood_Sign_(Zuschnitt).jpg" alt="">
+								</div>
 							</div>
 						</div>
 					</div>
