--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 						<!-- DROPDOWN MENU -->
 						<li><a href="#UbicacionYhorarios">Ubicación y horarios</a></li>
 
-						<!-- MAPA <li><a href="./pages/museo.html">Mapa</a></li>-->
+						<!-- MAPA -->
+							
+						<li><a href="./pages/museo.html">Mapa</a></li>
 
 
 						<!-- DROPDOWN MENU 
