--- a/pages/museo.html
+++ b/pages/museo.html
@@ -53,7 +53,7 @@
 			<div class="navik-header-container">
 				<!-- LOGO IMAGE -->
 				<div class="logo" data-sticky-logo="../images/granero/logos/Logo granero png (1).png">
-					<a href="#LA"><img src="../images/granero/logos/Logo granero png (1).png" alt="header-logo" /></a>
+					<a href="../index.html"><img src="../images/granero/logos/Logo granero png (1).png" alt="header-logo" /></a>
 				</div>
 				<!-- BURGER MENU -->
 				<div class="burger-menu">
