--- a/index.html
+++ b/index.html
@@ -53,111 +53,120 @@
 	<link href="css/responsive.css" rel="stylesheet">
 
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JFP3DYP1VP"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() { dataLayer.push(arguments); }
-	gtag('js', new Date());
-
-	gtag('config', 'G-JFP3DYP1VP');
-</script>
 
 <body>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JFP3DYP1VP"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-JFP3DYP1VP');
+	</script>
+
+	<body>
 
 
 
-	<!-- PRELOADER SPINNER
+		<!-- PRELOADER SPINNER
 		============================================= -->
-	<div id="loader-wrapper">
-		<div id="loader">
-			<div class="cssload-spinner">
-				<img src="./images/iso-66.png" alt="cargando">
+		<div id="loader-wrapper">
+			<div id="loader">
+				<div class="cssload-spinner">
+					<img src="./images/iso-66.png" alt="cargando">
+				</div>
 			</div>
 		</div>
-	</div>
 
 
-	<!-- HEADER-3
+		<!-- HEADER-3
 		============================================= -->
-	<header id="header-3" class="header navik-header header-transparent header-shadow">
-		<div class="container">
+		<header id="header-3" class="header navik-header header-transparent header-shadow">
+			<div class="container">
 
 
-			<!-- NAVIGATION MENU -->
-			<div class="navik-header-container">
+				<!-- NAVIGATION MENU -->
+				<div class="navik-header-container">
 
-				<!-- LOGO IMAGE -->
-				<div class="logo" data-sticky-logo="images/granero/logos/Logo granero png (1).png">
-					<a href="#hero-4"><img src="./images/granero/logos/Logo granero png (1).png"
-							alt="header-logo" /></a>
-				</div>
-
-
-				<!-- BURGER MENU -->
-				<div class="burger-menu">
-					<div class="line-menu line-half first-line"></div>
-					<div class="line-menu"></div>
-					<div class="line-menu line-half last-line"></div>
-				</div>
+					<!-- LOGO IMAGE -->
+					<div class="logo" data-sticky-logo="images/granero/logos/Logo granero png (1).png">
+						<a href="#hero-4"><img src="./images/granero/logos/Logo granero png (1).png"
+								alt="header-logo" /></a>
+					</div>
 
 
-				<!-- MAIN MENU -->
-				<nav class="navik-menu menu-caret navik-yellow">
-					<ul class="top-list">
+					<!-- BURGER MENU -->
+					<div class="burger-menu">
+						<div class="line-menu line-half first-line"></div>
+						<div class="line-menu"></div>
+						<div class="line-menu line-half last-line"></div>
+					</div>
 
 
-						<!-- DROPDOWN MENU -->
-						<li><a href="#Principal">Nuestro menú</a>
-							<ul>
-								<li><a href="#vendido">Lo mas vendido</a></li>
-							</ul>
-						</li>
-
-						<!-- DROPDOWN MENU -->
-						<li><a href="#UbicacionYhorarios">Ubicación y horarios</a></li>
-
-						<!-- MAPA -->
-							
-						<li><a href="./pages/museo.html">Mapa</a></li>
+					<!-- MAIN MENU -->
+					<nav class="navik-menu menu-caret navik-yellow">
+						<ul class="top-list">
 
 
-						<!-- DROPDOWN MENU 
+							<!-- DROPDOWN MENU -->
+							<li><a href="#Principal">Nuestro menú</a>
+								<ul>
+									<li><a href="#vendido">Lo mas vendido</a></li>
+								</ul>
+							</li>
+
+							<!-- DROPDOWN MENU -->
+							<li><a href="#UbicacionYhorarios">Ubicación y horarios</a></li>
+
+							<!-- MAPA -->
+
+							<li><a href="./pages/museo.html">Mapa</a></li>
+
+							<!-- DELIVERY -->
+
+							<li><a href="./delivery/index.html">Delivery</a></li>
+
+
+							<!-- DROPDOWN MENU 
 						<li><a href="#">Contacto</a>
 						-->
 
 
-					</ul>
-				</nav> <!-- END MAIN MENU -->
+						</ul>
+					</nav> <!-- END MAIN MENU -->
 
 
-			</div> <!-- END NAVIGATION MENU -->
+				</div> <!-- END NAVIGATION MENU -->
 
 
-		</div> <!-- End container -->
-	</header> <!-- END HEADER-3 -->
-
-
-
-
-	
-	<div id="page" class="page">
+			</div> <!-- End container -->
+		</header> <!-- END HEADER-3 -->
 
 
 
 
 
-		<section class=" division ">
-			<div class="bordes arregloBordes">
-				<div class="">
+		<div id="page" class="page">
+
+
+
+
+
+			<section class=" division ">
+				<div class="bordes arregloBordes">
 					<div class="">
-						<div class="inicio">
-							<div style="padding:56.25% 0 0 0;position:relative;">
-								<iframe src="https://player.vimeo.com/video/882083111?h=2060a02dc7&autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-							</div>
+						<div class="">
+							<div class="inicio">
+								<div style="padding:56.25% 0 0 0;position:relative;">
+									<iframe
+										src="https://player.vimeo.com/video/882083111?h=2060a02dc7&autoplay=1&loop=1&title=0&byline=0&portrait=0"
+										style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
+										allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+								</div>
 
-							
-							<!-- PAGE CONTENT
+
+								<!-- PAGE CONTENT
 		
 							<div class="primerPagina text-center white-color rounded ">
 
@@ -179,7 +188,7 @@
 
 					</div>
 				</div>
-			</div>
+		</div>
 		</section>
 
 
@@ -754,14 +763,14 @@
 			</div> <!-- End container -->
 		</section> <!-- END MENU-6 -->
 
-		
-			
+
+
 		<section class=" division bordes sectionMuseo">
 			<div class="videoAuto">
 				<h2 class="h2-lg text-center">Vivi la experiencia de la ruta 66</h2>
 				<p class="white-color">disfruta la ruta 66 desde tu casa
 				</p>
-				<a href="./pages/museo.html"  class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
+				<a href="./pages/museo.html" class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
 			</div>
 			<div class="video-container">
 				<video autoplay muted playsinline id="video-fondo">
@@ -769,7 +778,7 @@
 				</video>
 			</div>
 		</section>
-		
+
 
 
 
@@ -868,7 +877,8 @@
 																</g>
 															</g>
 														</g>
-													</svg></div>
+													</svg>
+												</div>
 												<div style="padding-top: 8px;">
 													<div
 														style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
@@ -923,7 +933,8 @@
 												<a href="https://www.instagram.com/reel/Cr9cLvFJMnV/?utm_source=ig_embed&amp;utm_campaign=loading"
 													style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
 													target="_blank">Una publicación compartida de Granero 66 Tandil
-													(@granero66tandil)</a></p>
+													(@granero66tandil)</a>
+											</p>
 										</div>
 									</blockquote>
 									<script async src="//www.instagram.com/embed.js"></script>
@@ -977,7 +988,8 @@
 																</g>
 															</g>
 														</g>
-													</svg></div>
+													</svg>
+												</div>
 												<div style="padding-top: 8px;">
 													<div
 														style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
@@ -1032,7 +1044,8 @@
 												<a href="https://www.instagram.com/reel/CswQZ-ygSSw/?utm_source=ig_embed&amp;utm_campaign=loading"
 													style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
 													target="_blank">Una publicación compartida de Granero 66 Tandil
-													(@granero66tandil)</a></p>
+													(@granero66tandil)</a>
+											</p>
 										</div>
 									</blockquote>
 									<script async src="//www.instagram.com/embed.js"></script>
@@ -1086,7 +1099,8 @@
 																</g>
 															</g>
 														</g>
-													</svg></div>
+													</svg>
+												</div>
 												<div style="padding-top: 8px;">
 													<div
 														style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;">
@@ -1141,7 +1155,8 @@
 												<a href="https://www.instagram.com/reel/CvdKzN0JAa8/?utm_source=ig_embed&amp;utm_campaign=loading"
 													style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
 													target="_blank">Una publicación compartida de Granero 66 Tandil
-													(@granero66tandil)</a></p>
+													(@granero66tandil)</a>
+											</p>
 										</div>
 									</blockquote>
 									<script async src="//www.instagram.com/embed.js"></script>
@@ -1291,42 +1306,42 @@
 
 
 
-	</div> <!-- END PAGE CONTENT -->
+		</div> <!-- END PAGE CONTENT -->
 
 
 
 
-	<!-- EXTERNAL SCRIPTS
+		<!-- EXTERNAL SCRIPTS
 		============================================= -->
-	<script src="js/jquery-3.5.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/modernizr.custom.js"></script>
-	<script src="js/jquery.appear.js"></script>
-	<script src="js/jquery.scrollto.js"></script>
-	<script src="js/menu.js"></script>
-	<script src="js/materialize.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/jquery.datetimepicker.full.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/ubicacion.js"></script>
-	<script src="js/booking-form.js"></script>
-	<script src="js/comment-form.js"></script>
-	<script src="js/contact-form.js"></script>
-	<script src="js/jquery.easing.js"></script>
-	<script src="js/jquery.flexslider.js"></script>
-	<script src="js/jquery.validate.min.js"></script>
-	<script src="https://player.vimeo.com/api/player.js"></script>
-	<!-- Custom Script -->
-	<script src="js/custom.js"></script>
+		<script src="js/jquery-3.5.1.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/modernizr.custom.js"></script>
+		<script src="js/jquery.appear.js"></script>
+		<script src="js/jquery.scrollto.js"></script>
+		<script src="js/menu.js"></script>
+		<script src="js/materialize.js"></script>
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/jquery.datetimepicker.full.js"></script>
+		<script src="js/jquery.ajaxchimp.min.js"></script>
+		<script src="js/ubicacion.js"></script>
+		<script src="js/booking-form.js"></script>
+		<script src="js/comment-form.js"></script>
+		<script src="js/contact-form.js"></script>
+		<script src="js/jquery.easing.js"></script>
+		<script src="js/jquery.flexslider.js"></script>
+		<script src="js/jquery.validate.min.js"></script>
+		<script src="https://player.vimeo.com/api/player.js"></script>
+		<!-- Custom Script -->
+		<script src="js/custom.js"></script>
 
-	<!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
-	<!-- [if lt IE 9]>
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+		<!-- [if lt IE 9]>
 			<script src="js/html5shiv.js" type="text/javascript"></script>
 			<script src="js/respond.min.js" type="text/javascript"></script>
 		<![endif] -->
 
-	<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
-	<!--
+		<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
+		<!--
 		<script>
 			var _gaq = _gaq || [];
 			_gaq.push(['_setAccount', 'UA-XXXXX-X']);
@@ -1342,7 +1357,7 @@
 
 
 
-</body>
+	</body>
 
 
 
