--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
 
 							<li><a href="./pages/museo.html">Mapa</a></li>
 
-							<!-- DELIVERY -->
+							<!-- DELIVERY 
 
 							<li><a href="./delivery/index.html">Delivery</a></li>
+
+							-->
 
 
 							<!-- DROPDOWN MENU 
@@ -160,7 +162,7 @@
 							<div class="inicio">
 								<div style="padding:56.25% 0 0 0;position:relative;">
 									<iframe
-										src="https://player.vimeo.com/video/882083111?h=2060a02dc7&autoplay=1&loop=1&title=0&byline=0&portrait=0"
+									src="https://player.vimeo.com/video/882083111?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
 										style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
 										allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 								</div>
@@ -206,7 +208,7 @@
 							<!-- Title -->
 							<h2 class="h2-lg">Ubicación y horarios</h2>
 							<!-- Text -->
-							<p class="p-lg grey-color">Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
+							<p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM y Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
 							</p>
 							<div class="container">
 								<div class="estadoTienda " id="estadoTienda"></div>
@@ -767,8 +769,8 @@
 
 		<section class=" division bordes sectionMuseo">
 			<div class="videoAuto">
-				<h2 class="h2-lg text-center">Vivi la experiencia de la ruta 66</h2>
-				<p class="white-color">disfruta la ruta 66 desde tu casa
+				<h2 class="h2-lg text-center">Viví la experiencia de la ruta 66</h2>
+				<p class="white-color">Disfrutá la ruta 66 desde tu casa
 				</p>
 				<a href="./pages/museo.html" class="btn btn-md btn-red tra-red-hover"> Iniciar viaje </a>
 			</div>
@@ -1238,6 +1240,8 @@
 								<h5 class="h5-md">Horas de trabajo</h5>
 
 								<!-- Text -->
+								<p>Miercoles: 18 - 00:00</p>
+								<p>Jueves: 18 - 00:00</p>
 								<p>Viernes: 11:30 - 00:00</p>
 								<p>Sábados: 11:30 - 00:00</p>
 								<p>Domingos: 11:30 - 00:00</p>
