--- a/delivery/index.html
+++ b/delivery/index.html
@@ -160,8 +160,8 @@
                 <a href="./pages/mila.html#menu"><li>Mila66</li></a>
                 <a href="./pages/philys.html#menu"><li>Philys</li></a>
                 <a href="./pages/sandwiches.html#menu"><li>Sandwiches</li></a>
-                <a href="./pages/hotdog.html#menu"><li>Sandwiches</li></a>
-                <a href="./pages/paraPicar.html#menu"><li>Sandwiches</li></a>
+                <a href="./pages/hotdog.html#menu"><li>Hot Dog</li></a>
+                <a href="./pages/paraPicar.html#menu"><li>Para picar</li></a>
                 <a href="./pages/ensaladas.html#menu"><li>Ensaladas</li></a>
                 <a href="./pages/celiacos.html#menu"><li>Celiacos</li></a>
                 <a href="./pages/postres.html#menu"><li>Postres</li></a>
