--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 						<div class="">
 							<div class="inicio">
 								<div style="padding:56.25% 0 0 0;position:relative;">
-									<iframe
-									src="https://player.vimeo.com/video/882083111?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+									<iframe 
+									src="https://player.vimeo.com/video/882083111?badge=0&amp;autopause=0&amp;loop=1&amp;autoplay=1&amp;player_id=0&amp;controls=0&amp;app_id=58479"
 										style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0"
-										allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+										allow="autoplay" allowfullscreen></iframe>
 								</div>
 
 
