--- a/delivery/index.html
+++ b/delivery/index.html
@@ -151,10 +151,10 @@
             </div> <!-- End row -->
         </div> <!-- End container -->
     </section> <!-- END ABOUT-2 -->
+    <p class="white-color" id="menu">a</p>
+    <section class="menu2" id="menu">
 
-    <section id="menu">
-
-        <div class="container">
+        <div class="container" >
             <div class="opcionesDelivery">
                 <a href=""><li class="opcionActiva">Hamburguesas</li></a>
                 <a href="./pages/mila.html#menu"><li>Mila66</li></a>
@@ -171,9 +171,10 @@
 
     </section>
 
+
     <section>
-        <div class="container">
-            <div class="boxMenu">
+        <div class="container" >
+            <div class="boxMenu" >
                 <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/los angeles.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Los Angeles</h3>
