--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
 							<li><a href="./pages/museo.html">Mapa</a></li>
 
-							<!-- DELIVERY 
+							<!-- DELIVERY -->
 
 							<li><a href="./delivery/index.html">Delivery</a></li>
 
-							-->
+							
 
 
 							<!-- DROPDOWN MENU 
@@ -208,8 +208,10 @@
 							<!-- Title -->
 							<h2 class="h2-lg">Ubicación y horarios</h2>
 							<!-- Text -->
-							<p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM y Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
-							</p>
+							<p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+							<p>-----------------------</p>
+							<p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
+							
 							<div class="container">
 								<div class="estadoTienda " id="estadoTienda"></div>
 								<div class="contadorTienda" id="contadorTienda"></div>
