--- a/pages/museo.html
+++ b/pages/museo.html
@@ -44,6 +44,16 @@
 	<link href="../css/responsive.css" rel="stylesheet">
 </head>
 
+<!-- PRELOADER SPINNER
+		============================================= -->
+		<div id="loader-wrapper">
+			<div id="loader">
+				<div class="cssload-spinner">
+					<img src="../images/iso-66.png" alt="cargando">
+				</div>
+			</div>
+		</div>
+
 <body>
 	<!-- HEADER-3
 		============================================= -->
