--- a/delivery/pages/ensaladas.html
+++ b/delivery/pages/ensaladas.html
@@ -151,8 +151,8 @@
             </div> <!-- End row -->
         </div> <!-- End container -->
     </section> <!-- END ABOUT-2 -->
-
-    <section id="menu">
+    <p class="white-color" id="menu">a</p>
+    <section id="menu" class="menu2">
 
         <div class="container">
             <div class="opcionesDelivery">
