--- a/delivery/index.html
+++ b/delivery/index.html
@@ -179,6 +179,9 @@
                 <div class="boxMenu-2">
                     <h3>Los Angeles</h3>
                     <p>Con queso azul, panceta, cebolla caramelizada y rucula</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -190,6 +193,7 @@
                     <p>$500 </p>
                     <p>$500 </p>
                 </div>
+                
             </div>
 
             <div class="boxMenu">
